BlackBeans.cydsn/REBUILD.log
--------------- Rebuild Started: 03/28/2019 23:04:43 Project: control.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/control.lst -funsigned-char -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -x c++ -c control.c -o .\CortexM3\ARM_GCC_541\Debug\control.o
control.c: In function 'omniwheel_t* omniwheel_new(size_t)':
control.c:44:29: error: invalid conversion from 'void*' to 'motor_t* {aka motor*}' [-fpermissive]
     motor_t* motors = malloc(size*sizeof(motor_t));
                             ^
control.c:45:24: error: 'fail' was not declared in this scope
     if (!motors)return fail;
                        ^
control.c:46:35: error: invalid conversion from 'void*' to 'omniwheel_t* {aka omniwheel*}' [-fpermissive]
     omniwheel_t* omniwheel= malloc(size*sizeof(omniwheel_t));
                                   ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/28/2019 23:04:43 ---------------
